syntax = "proto3";
import "gogoproto/gogo.proto";

package palomachain.paloma.evm;

option go_package = "github.com/palomachain/paloma/x/evm/types";


message Valset {
  // hex addresses on the EVM network
  repeated string validators = 1;
  repeated uint64 powers = 2;
  uint64 valsetID = 3;
}

message SubmitLogicCall {
  string hexContractAddress = 1;
  bytes abi = 2;
  bytes payload = 3;
  int64 deadline = 4;
}

message UpdateValset {
  Valset valset = 1;
}

message UploadSmartContract {
  bytes bytecode = 1;
  string abi = 2;
  bytes constructorInput = 3;
}

message Message {
  string turnstoneID = 1;
  string chainReferenceID = 2;

  oneof action {
    SubmitLogicCall submitLogicCall = 3;
    UpdateValset updateValset = 4;
    UploadSmartContract uploadSmartContract = 5;
  }

  string compassAddr = 6;
}
