syntax = "proto3";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

package palomachain.paloma.evm;

option go_package = "github.com/palomachain/paloma/x/evm/types";

message ValidatorBalancesAttestation {
  repeated string hexAddresses = 1;

  repeated bytes valAddresses = 2
      [ (gogoproto.casttype) =
            "github.com/cosmos/cosmos-sdk/types.ValAddress" ];
  google.protobuf.Timestamp fromBlockTime = 3
      [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true ];
  string assignee = 7;
}

message ValidatorBalancesAttestationRes {
  uint64 blockHeight = 1;
  repeated string balances = 2;
}
